--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".QuizApp"
         android:allowBackup="true"
         android:icon="@drawable/vec"
         android:label="@string/app_name"
