--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizApp">
-        <activity android:name=".ui.question.QuestionActivity"/>
-        <activity android:name=".SecActivity"/>
-        <activity android:name=".MainActivity"
+        <activity android:name=".ui.resultActivity.ResultActivity"></activity>
+        <activity android:name=".ui.question.QuestionActivity" />
+        <activity android:name=".SecActivity" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
